// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./index.stories AllVariants 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root css-ofxwhm-MuiStack-root"
    >
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-a204je-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Primary
          </span>
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ecvfp3-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Secondary
          </span>
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-10fp53-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Info
          </span>
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-2q1p8k-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Warning
          </span>
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1cjet8q-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Success
          </span>
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1im6wh6-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
          >
            Error
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`./index.stories CustomBackground 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1it6y0c-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          Custom
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-a204je-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          Processing
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Error 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1im6wh6-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            data-testid="ErrorIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
            />
          </svg>
           Failed
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Info 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-10fp53-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
           Needs confirmation
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Primary 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-a204je-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          Queued
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Secondary 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ecvfp3-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          On-chain
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Success 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1cjet8q-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            data-testid="CheckIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
           Executed
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`./index.stories Warning 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-2q1p8k-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-qmwq9b-MuiChip-label"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-lkspku-MuiTypography-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            data-testid="ScheduleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
            />
            <path
              d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           Pending
        </span>
      </span>
    </div>
  </div>
</div>
`;
